<resources>
    <string name="app_name">StackOverFlow User</string>
    <string name="user_reputation_title">User Reputation</string>

    <string name="no_internet_connection">"No internet connection!"</string>
    <string name="no_data">"No data!"</string>

    <string-array name="user_list_menu">
        <item>All</item>
        <item>Bookmarked</item>
    </string-array>
</resources>
